--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" type="image/png" href="todo_logo3.png">
   <style>
-    /* Basic styles for modal */
     .modal {
       display: none;
       position: fixed;
@@ -43,7 +42,6 @@
       cursor: pointer;
     }
 
-    /* Style for buttons */
     button {
       padding: 10px 15px;
       margin: 5px;
@@ -58,11 +56,11 @@
     }
 
     #sync-btn {
-      background-color: #4CAF50; /* Green */
+      background-color: #4CAF50; 
       position: absolute;
       top: 10px;
       right: 10px;
-      z-index: 10; /* Ensure it stays above other content */
+      z-index: 10;
     }
 
     header {
@@ -90,7 +88,7 @@
 
 <body>
   <div class="container">
-    <button id="sync-btn">Sync</button>
+    <!--<button id="sync-btn">Sync</button>-->
     <header>
       <h1>Todo Lists Dashboard</h1>
     </header>
@@ -260,10 +258,10 @@
       });
 
       // Sync button functionality
-      syncBtn.onclick = function () {
-        saveTodos();
-        alert('Todos synchronized!');
-      };
+      //syncBtn.onclick = function () {
+        //saveTodos();
+        //alert('Todos synchronized!');
+      //};
 
       // Load todos on page load
       window.onload = loadTodos;
