--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </footer>
 
     <!-- Modal for Login/Register -->
-    <div id="login-modal" class="modal">
+    <!--<div id="login-modal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Login</h2>
@@ -136,7 +136,7 @@
       </div>
     </div>
 
-    <div id="user-name"></div>
+    <div id="user-name"></div> -->
 
     <script>
       const addTodoForm = document.querySelector('#add-todo-form');
