--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <!--<p>Instructions for use...</p>
     </footer>
 
-    <!-- Modal for Login/Register -->
+     Modal for Login/Register
     <!--<div id="login-modal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
@@ -134,9 +134,9 @@
         </div>
         <button id="register">Register</button>
       </div>
-    </div>
+    </div> -->
 
-    <div id="user-name"></div> -->
+    <div id="user-name"></div>
 
     <script>
       const addTodoForm = document.querySelector('#add-todo-form');
