--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div id="user-name"></div>
 
     <!-- Modal for Login/Register -->
-    <!-- <div id="login-modal" class="modal">
+    <div id="login-modal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Login</h2>
